@@ -16,17 +16,20 @@ class MatrixElement(QtWidgets.QWidget):
 
         self.active = False
         self.enabled = True
+        self.invalid = False
 
         self.update_content()
 
     def __getstate__(self):
-        state = {"active": self.active,
-                 "enabled": self.enabled}
+        state = {"active": self.active and not self.invalid,
+                 "enabled": self.enabled,
+                 "invalid": self.invalid}
         return state
 
     def __setstate__(self, state):
-        self.active = state["active"]
+        self.active = state["active"] and not state["invalid"]
         self.enabled = state["enabled"]
+        self.invalid = state["invalid"]
         self.update_content()
 
     def has_quickview(self):
@@ -39,17 +42,22 @@ class MatrixElement(QtWidgets.QWidget):
 
     def mousePressEvent(self, event):
         # toggle selection
-        if event.modifiers() == QtCore.Qt.ShiftModifier:
-            quickview = not self.has_quickview()
-        else:
-            self.active = not self.active
-            quickview = False
-            self.element_changed.emit()
-        self.update_content(quickview)
-        event.accept()
+        if not self.invalid:
+            if event.modifiers() == QtCore.Qt.ShiftModifier:
+                quickview = not self.has_quickview()
+            else:
+                self.active = not self.active
+                quickview = False
+                self.element_changed.emit()
+            self.update_content(quickview)
+            event.accept()
 
     def update_content(self, quickview=False):
-        if self.active and self.enabled:
+        if self.invalid:
+            color = "#DCDCDC"  # gray
+            label = "invalid"
+            tooltip = "Incompatible filter settings"
+        elif self.active and self.enabled:
             color = "#86E789"  # green
             label = "active"
             tooltip = "Click to deactivate"
@@ -66,24 +74,25 @@ class MatrixElement(QtWidgets.QWidget):
             label = "inactive\n(unused)"
             tooltip = "Click to activate"
 
-        if self.has_quickview():
-            do_quickview = True
-        elif quickview:
-            curinst = MatrixElement._quick_view_instance
-            # reset color of old quick view instance
-            if curinst is not None and self is not curinst:
-                MatrixElement._quick_view_instance = None
-                curinst.update_content()
-            MatrixElement._quick_view_instance = self
-            do_quickview = True
-        else:
-            do_quickview = False
-        if do_quickview:
-            color = "#F0A1D6"
-            label += "\n(QV)"
-            self.quickview_selected.emit()
-        else:
-            tooltip += "\nShift+Click for Quick View"
+        if not self.invalid:
+            if self.has_quickview():
+                do_quickview = True
+            elif quickview:
+                curinst = MatrixElement._quick_view_instance
+                # reset color of old quick view instance
+                if curinst is not None and self is not curinst:
+                    MatrixElement._quick_view_instance = None
+                    curinst.update_content()
+                MatrixElement._quick_view_instance = self
+                do_quickview = True
+            else:
+                do_quickview = False
+            if do_quickview:
+                color = "#F0A1D6"
+                label += "\n(QV)"
+                self.quickview_selected.emit()
+            else:
+                tooltip += "\nShift+Click for Quick View"
 
         self.setStyleSheet("background-color:{}".format(color))
         self.label.setStyleSheet("background-color:{}".format(color))
