@@ -311,7 +311,8 @@ class Pipeline(object):
         else:
             return dsend
 
-    def get_features(self, scalar=False, label_sort=False, union=False):
+    def get_features(self, scalar=False, label_sort=False, union=False,
+                     plot_id=None):
         """Return a list of features in the pipeline
 
         Parameters
@@ -323,8 +324,12 @@ class Pipeline(object):
             instead of by feature name
         union: bool
             If True, return the union of features available in all
-            slots of the pipeline. If False (default), return only
-            those features that are shared by all slots.
+            slots. If False (default), return only those features
+            that are shared by all slots.
+        plot_id: None or str
+            If set, only datasets that are part of the matching Plot
+            instance are used. If None, all datasets of the pipeline
+            are used.
         """
         if scalar:
             base_features = dclab.dfn.scalar_feature_names
@@ -335,14 +340,18 @@ class Pipeline(object):
         else:
             features = set(base_features)
         for slot_index in range(self.num_slots):
-            ds = self.get_dataset(slot_index=slot_index,
-                                  filt_index=0,
-                                  apply_filter=False)
-            ds_features = set(ds.features) & set(base_features)
-            if union:
-                features |= ds_features
-            else:
-                features &= ds_features
+            slot_id = self.slot_ids[slot_index]
+            if (plot_id is None
+                or (self.element_states[slot_id][plot_id]
+                    and slot_id in self.slots_used)):
+                ds = self.get_dataset(slot_index=slot_index,
+                                      filt_index=0,
+                                      apply_filter=False)
+                ds_features = set(ds.features) & set(base_features)
+                if union:
+                    features |= ds_features
+                else:
+                    features &= ds_features
         if label_sort:
             labs = [dclab.dfn.feature_name2label[f] for f in features]
             lf = sorted(zip(labs, features))
