@@ -9,6 +9,7 @@
    legend, and event count
  - refactor data model
  - functionalize buttons in analysis view
+ - correctly handle datasets with different sets of features
 2.0.0a23
  - add more update functions to fix frozen macOS app
  - improve plot visualizations
